clean things up after installing pkgs in ubuntu

--- a/ubuntu/tensorflow/cpu/buildDocker/Dockerfile
+++ b/ubuntu/tensorflow/cpu/buildDocker/Dockerfile
@@ -7,6 +7,8 @@ COPY sources.list /etc/apt/sources.list
 RUN apt-get --yes update \
     && apt-get --yes upgrade \
     && apt-get --yes install python3 python3-pip python3-dev \
+    && apt-get --yes autoremove \
+    && apt-get --yes clean \
     && pip3 install tensorflow \
     && ln -sf python3 /usr/bin/python
 
