add dockerfiles for tensorflow gpu-version

--- a/arch/tensorflow/gpu/buildDocker/Dockerfile
+++ b/arch/tensorflow/gpu/buildDocker/Dockerfile
@@ -3,6 +3,18 @@ FROM kyechou/archlinux
 MAINTAINER KY Chou <forendef2846@gmail.com>
 
 RUN pacman -Syu --needed --noconfirm \
+        # depends
+        gcc-libs \
+        python \
+        python-protobuf \
+        python-werkzeug \
+        python-bleach \
+        python-markdown \
+        python-numpy \
+        # makedepends
+        python-pip \
+    && pip install tensorflow-gpu \
+    && pacman -Rsn --noconfirm python-pip \
     && rm -rf \
         /usr/share/man/* \
         /var/cache/pacman/pkg/* \
