--- a/centos/tensorflow/gpu/buildDocker/Dockerfile
+++ b/centos/tensorflow/gpu/buildDocker/Dockerfile
@@ -2,7 +2,16 @@ FROM centos
 
 MAINTAINER KY Chou <forendef2846@gmail.com>
 
-RUN yum -y update
+RUN yum -y update \
+    && yum -y install epel-release \
+    && yum -y install \
+        libgomp \
+        python34 \
+        python34-pip \
+        python34-devel \
+    && pip3 install tensorflow-gpu \
+    && ln -sf python3 /usr/bin/python \
+    && mkdir -p /usr/local/cuda-8.0
 
 CMD ["/bin/bash"]
 
