--- a/ubuntu/caffe/buildDocker/Dockerfile
+++ b/ubuntu/caffe/buildDocker/Dockerfile
@@ -7,6 +7,6 @@ COPY sources.list /etc/apt/sources.list
 RUN apt-get --yes update \
     && apt-get --yes upgrade
 
-CMD ["/bin/bash"]
+ENTRYPOINT ["/bin/bash"]
 
 # vim: set ts=4 sw=4 et :
