--- a/centos/jupyter/buildDocker/Dockerfile
+++ b/centos/jupyter/buildDocker/Dockerfile
@@ -4,6 +4,6 @@ MAINTAINER KY Chou <forendef2846@gmail.com>
 
 RUN yum -y update
 
-CMD ["/bin/bash"]
+ENTRYPOINT ["/bin/bash"]
 
 # vim: set ts=4 sw=4 et :
