--- a/ubuntu/tensorflow/cpu/buildDocker/Dockerfile
+++ b/ubuntu/tensorflow/cpu/buildDocker/Dockerfile
@@ -12,6 +12,6 @@ RUN apt-get --yes update \
     && pip3 install tensorflow \
     && ln -sf python3 /usr/bin/python
 
-CMD ["/bin/bash"]
+ENTRYPOINT ["/bin/bash"]
 
 # vim: set ts=4 sw=4 et :
