remove comments and purge unnecessary pkgs in ubuntu

--- a/ubuntu/nginx/buildDocker/Dockerfile
+++ b/ubuntu/nginx/buildDocker/Dockerfile
@@ -7,7 +7,7 @@ COPY sources.list /etc/apt/sources.list
 RUN apt-get --yes update \
     && apt-get --yes upgrade \
     && apt-get --yes install nginx \
-    && apt-get --yes autoremove \
+    && apt-get --yes autoremove --purge \
     && apt-get --yes clean \
     && rm -rf /etc/nginx /var/www/html
 
