--- a/ubuntu/tensorflow/cpu/buildDocker/Dockerfile
+++ b/ubuntu/tensorflow/cpu/buildDocker/Dockerfile
@@ -6,10 +6,14 @@ COPY sources.list /etc/apt/sources.list
 
 RUN apt-get --yes update \
     && apt-get --yes upgrade \
-    && apt-get --yes install python3 python3-pip python3-dev \
-    && apt-get --yes autoremove \
-    && apt-get --yes clean \
+    && apt-get --yes install \
+        python3 \
+        python3-pip \
+        python3-dev \
     && pip3 install tensorflow \
+    && apt-get --yes remove python3-pip --purge \
+    && apt-get --yes autoremove --purge \
+    && apt-get --yes clean \
     && ln -sf python3 /usr/bin/python
 
 ENTRYPOINT ["/bin/bash"]
