--- a/keras/theano-backend/centos/Makefile
+++ b/keras/theano-backend/centos/Makefile
@@ -12,7 +12,4 @@ all: build
 build:
 	docker build -f ./buildDocker/Dockerfile -t kyechou/keras:theano-centos ./buildDocker
 
-create: build
-	docker create -h keras-theano --name keras-theano kyechou/keras:theano-centos
-
-.PHONY: all build create
+.PHONY: all build
