--- a/tensorflow/gpu/ubuntu/Makefile
+++ b/tensorflow/gpu/ubuntu/Makefile
@@ -12,7 +12,4 @@ all: build
 build:
 	docker build -f ./buildDocker/Dockerfile -t kyechou/tensorflow:gpu-ubuntu ./buildDocker
 
-create: build
-	docker create -h tfgpu --name tfgpu -p 8888:8888 kyechou/tensorflow:gpu-ubuntu
-
-.PHONY: all build create
+.PHONY: all build
